# kde6-cpu-boost-switcher

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
kauth/: io.github.szumak75.kde6cpuboostswitcher.helper.conf.in  io.github.szumak75.kde6cpuboostswitcher.helper.policy  io.github.szumak75.kde6cpuboostswitcher.helper.service.in
package/: metadata.json
package/contents/code/: CpuBoostParser.js  I18n.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: CommandRunner.qml  CompactRepresentation.qml  CpuBoostIcon.qml  FullRepresentation.qml  configGeneral.qml  main.qml
po/: de.po  es.po  fr.po  pl.po
scripts/: build-translations.sh
src/: cpuboost-sysfs.cpp  cpuboost-sysfs.h  kauth-client.cpp  kauth-helper.cpp  restore-state.cpp
systemd/: cpuboost-restore.service.in
